--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -31,7 +31,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: {context}/backend/Dockerfile
+          file: "{context}/backend/Dockerfile"
           build-args: |
             RELEASE=${{ github.run_number }}
             GH_CI_USER=${{ secrets.GH_CI_USER }}
