--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@coinbase/coinbase-sdk": "^0.10.0",
     "@coinbase/onchainkit": "^0.35.5",
     "@nextui-org/react": "^2.4.8",
+    "@vapi-ai/web": "^2.1.7",
     "ethers": "^6.13.4",
     "framer-motion": "^11.11.17",
     "next": "15.0.3",
