--- a/.github/workflows/swap.yml
+++ b/.github/workflows/swap.yml
@@ -33,7 +33,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: "swagapi/Dockerfile"
+          file: "swapapi/Dockerfile"
           build-args: |
             RELEASE=${{ github.run_number }}
             GH_CI_USER=${{ secrets.GH_CI_USER }}
