--- a/swapapi/Dockerfile
+++ b/swapapi/Dockerfile
@@ -16,5 +16,5 @@ COPY . .
 # Expose the port the app runs on
 EXPOSE 3000
 
-# Start the application :)
+# Start the application
 CMD ["yarn", "start"]
