--- a/.github/workflows/swap.yml
+++ b/.github/workflows/swap.yml
@@ -15,6 +15,9 @@ jobs:
       packages: write
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v4
+      -
         name: Get commit message
         id: commit_message
         uses: sergeysova/jq-action@v2
@@ -33,7 +36,7 @@ jobs:
         name: Build and push
         uses: docker/build-push-action@v5
         with:
-          file: "swapapi/Dockerfile"
+          context: swapapi
           build-args: |
             RELEASE=${{ github.run_number }}
             GH_CI_USER=${{ secrets.GH_CI_USER }}
