Update 1inch wallet service

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,3 @@
-NEXT_PUBLIC_BASE_RPC_URL=https://goerli.base.org
-NEXT_PUBLIC_BASE_CHAIN_ID=84531
+NEXT_PUBLIC_BASE_RPC_URL=https://mainnet.base.org
+NEXT_PUBLIC_BASE_CHAIN_ID=8453
+NEXT_PUBLIC_ONCHAINKIT_API_KEY=iNH9clbilB5VamLDoCLeBgfRUR1fGudJ
